--- a/mysite/icyWater/templates/account/login.html
+++ b/mysite/icyWater/templates/account/login.html
@@ -1,6 +1,8 @@
+{% load static %}
+
 <head>
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-
+  <link rel="stylesheet" type="text/css" href="{% static 'account/wallp.css' %}" />
 </head>
 
 <div class="container">
@@ -8,5 +10,5 @@
   <div class="login">
     Login
   </div>
-  
+
 </div>
