--- a/mysite/icyWater/templates/account/login.html
+++ b/mysite/icyWater/templates/account/login.html
@@ -1,14 +1,21 @@
+{% extends 'base.html' %}
 {% load static %}
+{% load bootstrap3 %}
 
-<head>
-  <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
-  <link rel="stylesheet" type="text/css" href="{% static 'account/wallp.css' %}" />
-</head>
+{% block body %}
 
 <div class="container">
     <h1>Welcome</h1>
   <div class="login">
     Login
   </div>
+    <form method="POST">
+      {% csrf_token %}
+      {% bootstrap_form form %}
+    <input type="submit" value="login" class="btn btn-default" />
+    </form>
+    </div>
 
-</div>
+
+
+{% endblock %}
