--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -14,7 +14,7 @@
        <div class="container-fluid">
          <ul class="nav navbar-nav">
            <li class="nav-item"><a class="page-scroll" href="#Music">Music</a></li>
-           <li class="nav-item"><a class="page-scroll" href="#About">About</a></li>
+           <li class="nav-item"><a class="page-scroll" href="{% url 'isewat:am' %} ">AboutMe</a></li>
 
          </ul>
        </div>
