--- a/mysite/icyWater/templates/aboutme.html
+++ b/mysite/icyWater/templates/aboutme.html
@@ -3,7 +3,18 @@
 {% load bootstrap3 %}
 
 {% block body %}
+<br />
+<div align = "center" class="rightcolumn">
+  <div class="card">
+    <h1>About Ise</h1>
+    <div class="fakeimg" style="height:100px;">Image</div>
+    <p>
+  “People find me to be an upbeat, self-motivated team player with excellent communication skills. For the past several years I have worked in lead qualification, telemarketing, and customer service in the technology industry. My experience includes successfully calling people in director-level positions of technology departments and developing viable leads. I have a track record of maintaining a consistent call and activity volume and consistently achieving the top 10 percent in sales, and I can do the same thing for your company.”
+    </p>
+  </div>
+<p class="about">
 
+</p>
 
 
 
