--- a/mysite/icyWater/templates/home.html
+++ b/mysite/icyWater/templates/home.html
@@ -5,17 +5,50 @@
 {% block body %}
 
 
-<h2>Local Audio Stream</h2>
+   <h1 class="my-4 text-center text-lg-left">Ise Music</h1>
+<br />
+   <div class="row text-center text-lg-left">
+
 {% for file in songs %}
-<li>
-<h4>{{ file.title }}</h4>
-<div id="play"><audio src="{{ file.music.url }}" controls="controls">
-  Your browser does not support the audio element.
-</audio></div>
-</li>
+
+
+    <div class="col-lg-3 col-md-4 col-xs-6">
+          <article class="video">
+         <figure>
+           <a class="fancybox fancybox.iframe" href="{{file.music.url}}">
+           <img class="img-fluid img-thumbnail" class="d-block mb-4 h-100" src="{{file.image.url}}"></a>
+         </figure>
+         <h2 class="videoTitle">{{file.title}}</h2>
+       </article>
+    </div>
 
 {% endfor %}
 
+    </div>
+</div
 
 
+
+ <script
+   src="http://code.jquery.com/jquery-3.3.1.min.js"
+   integrity="sha256-FgpCb/KJQlLNfOu91ta32o/NMZxltwRo8QtmkMRdAu8="
+   crossorigin="anonymous"></script>
+
+ <script src="js/jquery.fancybox.min.js"></script>
+
+ <script>
+   $(document).ready(function() {
+     $('.fancybox').fancybox({
+       padding   : 0,
+       maxWidth  : '100%',
+       maxHeight : '100%',
+       width   : 560,
+       height    : 315,
+       autoSize  : true,
+       closeClick  : true,
+       openEffect  : 'elastic',
+       closeEffect : 'elastic'
+     });
+   });
+ </script>
 {% endblock %}
