--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -6,14 +6,20 @@
 <head>
 
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css" integrity="sha384-BVYiiSIFeK1dGmJRAkycuHAHRg32OmUcww7on3RYdg4Va+PmSTsz/K68vbdEjh4u" crossorigin="anonymous">
+
+--   <link href="https://cdnjs.cloudflare.com/ajax/libs/ekko-lightbox/5.3.0/ekko-lightbox.css" rel="stylesheet">
+   <link href="http://vjs.zencdn.net/4.12/video-js.css" rel="stylesheet">
+<script src="http://vjs.zencdn.net/4.12/video.js"></script>
       <link rel="stylesheet" type="text/css" href="{% static 'account/wallp.css' %}" />
+<link href="https://fonts.googleapis.com/css?family=Eater" rel="stylesheet">
+
 </head>
 <body>
 
   <nav class="main-nav navbar-fixed-top navbar-default" role="navigation">
        <div class="container-fluid">
          <ul class="nav navbar-nav">
-           <li class="nav-item"><a class="page-scroll" href="#Music">Music</a></li>
+           <li class="nav-item"><a class="page-scroll" href="{% url 'isewat:home'  %}">Music</a></li>
            <li class="nav-item"><a class="page-scroll" href="{% url 'isewat:am' %} ">AboutMe</a></li>
 
          </ul>
@@ -24,5 +30,13 @@
 {% endblock %}
 
 </body>
+<nav class="main-nav navbar-fixed-bottom navbar-default" role="navigation">
+     <div class="container-fluid">
+       <ul class="nav navbar-nav">
+       <li class="navbar-brand">Follow</li>
+         <li class="nav-item"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fcooper-aslen&color=orange_white&size=40" style="width: 40px; height: 40px;"></iframe></li>
 
+       </ul>
+     </div>
+</nav>
 </html>
