--- a/mysite/icyWater/templates/home.html
+++ b/mysite/icyWater/templates/home.html
@@ -13,7 +13,7 @@
 
 
     <div class="col-lg-3 col-md-4 col-xs-6">
-          <article class="video">
+          <article class="video" class="photo" >
          <figure>
            <a class="fancybox fancybox.iframe" href="{{file.music.url}}">
            <img class="img-fluid img-thumbnail" class="d-block mb-4 h-100" src="{{file.image.url}}"></a>
