--- a/mysite/static/account/wallp.css
+++ b/mysite/static/account/wallp.css
@@ -9,6 +9,15 @@ body {
      font-family: 'Eater', cursive
 }
 
+
+
+.img-thumbnail {
+height: 200px;
+width: 300px;
+}
+
+
+
 .about{
    font-size: 40px;
 }
@@ -18,7 +27,7 @@ body {
   margin: auto;
      width: 90%;
      border: 3px solid transparent;
-     line-height: 40px; 
+     line-height: 40px;
      padding: 20px;
 }
 
