add in login button`

--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -33,10 +33,11 @@
 <nav class="main-nav navbar-fixed-bottom navbar-default" role="navigation">
      <div class="container-fluid">
        <ul class="nav navbar-nav">
-       <li class="navbar-brand">Follow</li>
          <li class="nav-item"><iframe allowtransparency="true" scrolling="no" frameborder="no" src="https://w.soundcloud.com/icon/?url=http%3A%2F%2Fsoundcloud.com%2Fcooper-aslen&color=orange_white&size=40" style="width: 40px; height: 40px;"></iframe></li>
-
        </ul>
+          <ul class="nav navbar-nav navbar-right">
+   <li><a class="page-scroll" href="{% url 'isewat:login'  %}">Login</a></li>
+          </ul>
      </div>
 </nav>
 </html>
