--- a/mysite/icyWater/templates/home.html
+++ b/mysite/icyWater/templates/home.html
@@ -5,7 +5,7 @@
 {% block body %}
 
 
-   <h1 class="my-4 text-center text-lg-left">Ise Music</h1>
+   <h1 class="my-4 text-center text-lg-left">Rvre Music</h1>
 <br />
    <div class="row text-center text-lg-left">
 
