--- a/mysite/templates/base.html
+++ b/mysite/templates/base.html
@@ -19,6 +19,10 @@
   <nav class="main-nav navbar-fixed-top navbar-default" role="navigation">
        <div class="container-fluid">
          <ul class="nav navbar-nav">
+            <a class="navbar-brand" rel="home" href="#" title="Buy Sell Rent Everyting">
+     <img style="max-width:100px; maxheight:100px; margin-top: -20px;"
+          src="/static/pics/logo.jpg">
+ </a>
            <li class="nav-item"><a class="page-scroll" href="{% url 'isewat:home'  %}">Music</a></li>
            <li class="nav-item"><a class="page-scroll" href="{% url 'isewat:am' %} ">AboutMe</a></li>
 
